--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ matrix:
       env: TOXENV=cov
       before_script: pip install -U coveralls
       after_success: coveralls
+    - python: 3.4
+      env: TOXENV=lint
 
 install: pip install -U tox
 script: tox
