--- a/tox.ini
+++ b/tox.ini
@@ -1,23 +1,20 @@
 [tox]
-envlist = py34, py35, py36
+envlist = py, lint
 skip_missing_interpreters = true
 
 [testenv]
-deps =
-    pytest
+deps = pytest
 commands = py.test
 
-[testenv:py34]
-basepython = python3.4
-
-[testenv:py35]
-basepython = python3.5
-
-[testenv:py36]
-basepython = python3.6
-
 [testenv:cov]
-deps =
-    pytest-cov
+deps = pytest-cov
 commands = py.test --cov=grammarinator
 usedevelop = true
+
+[testenv:lint]
+deps =
+    pylint
+    pep8
+commands =
+    pylint grammarinator
+    pep8 grammarinator --ignore=E501
