--- a/tox.ini
+++ b/tox.ini
@@ -4,17 +4,17 @@ skip_missing_interpreters = true
 
 [testenv]
 deps = pytest
-commands = py.test
+commands = py.test {posargs}
 
 [testenv:cov]
 deps = pytest-cov
-commands = py.test --cov=grammarinator
+commands = py.test --cov=grammarinator {posargs}
 usedevelop = true
 
 [testenv:lint]
 deps =
     pylint
-    pep8
+    pycodestyle
 commands =
     pylint grammarinator
-    pep8 grammarinator --ignore=E501
+    pycodestyle grammarinator --ignore=E501
