.gitignore and MANIFEST.in maintenance

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,8 @@
 include README.rst
 include LICENSE.rst
+include RELNOTES.rst
 include MANIFEST.in
 include grammarinator/VERSION
 recursive-include grammarinator/resources *
+global-exclude __pycache__
+global-exclude *.py[co]
