--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,10 @@ jobs:
       env: TOXENV=py
     - python: 3.6
       env: TOXENV=py
+    - python: 3.7
+      env: TOXENV=py
+      dist: xenial
+      sudo: required
     - python: 3.4
       env: TOXENV=lint
 
