Simplify version key in AppVeyor CI configuration
The default format `1.0.{build}` is artificial, the `1.0.` prefix
has no real meaning, `{build}` is enough.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,3 +1,5 @@
+version: "{build}"
+
 environment:
   TOXENV: "py"
   TOX_TESTENV_PASSENV: "USERPROFILE" # should be passed down to test command automatically but obviously isn't
