Extend travis with py38 and appveyor with py37 testing
Beside adding new environments, the unneccesary xenial distro is
removed from the py37 travis environment.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,8 @@ jobs:
       env: TOXENV=py
     - python: 3.7
       env: TOXENV=py
-      dist: xenial
+    - python: 3.8
+      env: TOXENV=py
     - python: 3.5
       env: TOXENV=lint
 
