--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,8 +6,10 @@ environment:
   matrix:
     - PYTHON: "C:\\Python35"
     - PYTHON: "C:\\Python36"
+    - PYTHON: "C:\\Python37"
     - PYTHON: "C:\\Python35-x64"
     - PYTHON: "C:\\Python36-x64"
+    - PYTHON: "C:\\Python37-x64"
 
 install: "%PYTHON%\\python.exe -m pip install tox"
 build: off
