Add Windows and macOS testing to Travis CI (and drop AppVeyor)

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,30 @@
 language: python
 
+git:
+  autocrlf: input
+
 install: pip install -U tox
 script: tox -v
+
+_anchors:
+  - &refreshpath eval $(powershell -NonInteractive -Command 'write("export PATH=`"" + ([Environment]::GetEnvironmentVariable("PATH","Machine") + ";" + [Environment]::GetEnvironmentVariable("PATH","User")).replace("\","/").replace("C:","/c").replace(";",":") + ":`$PATH`"")')
 
 jobs:
   include:
     - stage: test
-      python: 3.5
+      os: windows
+      language: shell
+      before_install:
+        - choco install openjdk python3
+        - *refreshpath
+        - python --version
+        - pip --version
+        - java -version
+      env: TOXENV=py3
+    - os: osx
+      language: shell
+      env: TOXENV=py3
+    - python: 3.5
       env: TOXENV=py
     - python: 3.6
       env: TOXENV=py
