Add tox environment to automatically regenerate example fuzzer
Help for the lazy developer. Also helps keep the version string in
the header OK.

--- a/tox.ini
+++ b/tox.ini
@@ -19,3 +19,7 @@ deps =
 commands =
     pylint grammarinator
     pycodestyle grammarinator --ignore=E501
+
+[testenv:regen]
+deps =
+commands = grammarinator-process examples/grammars/HTMLLexer.g4 examples/grammars/HTMLParser.g4 -o examples/fuzzer/
