Migrate tests from Travis CI to GitHub Actions

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py, lint
+envlist = py, lint, twine-check
 skip_missing_interpreters = true
 
 [testenv]
@@ -19,6 +19,10 @@ deps =
 commands =
     pylint grammarinator
     pycodestyle grammarinator --ignore=E501
+
+[testenv:twine-check]
+deps = twine
+commands = twine check {toxworkdir}/dist/*
 
 [testenv:regen]
 deps =
