Fix setup and coverage
- Pin setuptools_scm to keep support for py3.5 alive
- Fix Coveralls upload issue

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
           python-version: '3.x'
       - run: pip install --upgrade tox coveralls
       - run: tox -v -e cov
-      - run: coveralls
+      - run: coveralls --service=github
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
