Upgrade setuptools on GH Actions
Setuptools before 42.0.0 had problems with setup_requires, but GH
Actions still installed 28.8.0/40.6.2 by default for Python 3.5/3.6

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/setup-java@v1
         with:
           java-version: 8
-      - run: pip install --upgrade tox
+      - run: pip install --upgrade setuptools tox
       - run: tox -v -e py
 
   lint:
