Move to pyproject.toml & setup.cfg-based packaging
- Added pyproject.toml to sandbox the build system.
    - Moved setup requirements from setup.py to pyproject.toml.
    - Changed versioning from "tag+distance.node.date" pattern to
      setuptools-scm's "post-release"+"node-and-date".
- Moved metadata and setuptools options from setup.py to
  setup.cfg.
    - Added long_description_content_type, license_file, and
      platform metadata.
    - Added python_requires option.
    - Dropped zip_safe option.
- Dropped setup.py altogether.
- Dropped MANIFEST.in as setuptools-scm properly tracks which
  files need to be included in source distributions (via git and
  .gitignore).
- Updated README.rst to document local installation with
  pyproject.toml instead of setup.py.
- Adapted tox.ini.
    - Ensured that tox virtual environments do isolated builds
      (so that they can deal with pyproject.toml).
    - Reworked "twine-check" to "build" env to build both sdist
      and wheel distributions before checking them (always
      re-created in .tox/build/tmp/).
- Adapted GH Actions.
    - Changed the "publish" job to call the new "build" tox env
      and upload both the sdist and the wheel distributions to
      PyPI.
    - Pinned the PyPI publish GH Action to v1.
    - Changed all jobs to do a full checkout to ensure proper
      versioning.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,40 @@
 [metadata]
-description-file = README.rst
+name = grammarinator
+description = Grammarinator: Grammar-based Random Test Generator
+long_description = file: README.rst
+long_description_content_type = text/x-rst
+author = Renata Hodovan, Akos Kiss
+author_email = hodovan@inf.u-szeged.hu, akiss@inf.u-szeged.hu
+url = https://github.com/renatahodovan/grammarinator
+license = BSD
+license_file = LICENSE.rst
+classifiers =
+    Intended Audience :: Developers
+    License :: OSI Approved :: BSD License
+    Operating System :: OS Independent
+    Programming Language :: Python
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.5
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Topic :: Software Development :: Code Generators
+    Topic :: Software Development :: Testing
+platform = any
+
+[options]
+packages = find:
+include_package_data = True
+python_requires = >=3.5
+install_requires =
+    antlerinator==4.9
+    autopep8
+    jinja2
+    setuptools
+
+[options.entry_points]
+console_scripts =
+    grammarinator-process = grammarinator.process:execute
+    grammarinator-generate = grammarinator.generate:execute
+    grammarinator-parse = grammarinator.parse:execute
