--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
-envlist = py, lint, twine-check
-skip_missing_interpreters = true
+envlist = py, lint, build
+isolated_build = true
 
 [testenv]
 deps = pytest
@@ -14,15 +14,21 @@ usedevelop = true
 
 [testenv:lint]
 deps =
-    pylint
     pycodestyle
+    pylint
 commands =
     pylint grammarinator
     pycodestyle grammarinator --ignore=E501
 
-[testenv:twine-check]
-deps = twine
-commands = twine check {toxworkdir}/dist/*
+[testenv:build]
+deps =
+    build
+    twine
+    virtualenv
+skip_install = true
+commands =
+    pyproject-build -o {envtmpdir}
+    twine check {envtmpdir}/*
 
 [testenv:regen]
 deps =
