--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,19 +11,23 @@ jobs:
     steps:
       - run: git config --global core.autocrlf input
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
       - uses: actions/setup-java@v1
         with:
           java-version: 8
-      - run: pip install --upgrade setuptools tox
+      - run: pip install --upgrade tox
       - run: tox -v -e py
 
   lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - uses: actions/setup-python@v2
         with:
           python-version: '3.x'
@@ -34,6 +38,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - uses: actions/setup-python@v2
         with:
           python-version: '3.x'
@@ -53,10 +59,10 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: '3.x'
-      - run: pip install --upgrade tox setuptools
-      - run: tox -v -e twine-check
-      - run: python setup.py sdist
-      - uses: pypa/gh-action-pypi-publish@master
+      - run: pip install --upgrade tox
+      - run: tox -v -e build
+      - uses: pypa/gh-action-pypi-publish@release/v1
         if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags') && github.repository == 'renatahodovan/grammarinator'
         with:
           password: ${{ secrets.pypi_token }}
+          packages_dir: .tox/build/tmp/
