Make use of the inators and antlerinator (epoch 1) packages
Use common code for CLI argument handling and importing.

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,8 +28,10 @@ packages = find:
 include_package_data = True
 python_requires = >=3.5
 install_requires =
-    antlerinator==4.9
+    antlerinator>=1!1.0.0
+    antlr4-python3-runtime==4.9; python_version>="3.0"
     autopep8
+    inators
     jinja2
     setuptools
 
