Build-time generation of ANTLRv4Lexer and Parser
The ANTLRv4 lexer and parser are used to process .g4 grammar files
(from which fuzzers are created). However, the ANTLRv4 grammars,
and the lexer and parser generated from them are constant. Hence,
building the lexer and parser every time is redundant and a waste
of resources.

This patch moves the generation of the lexer and the parser from
run-time to build-time (using the build_antlr setuptools extension
provided by ANTLeRinator).

--- a/.pylintrc
+++ b/.pylintrc
@@ -1,3 +1,8 @@
+[MASTER]
+
+# Files or directories to be skipped. They should be base names, not paths.
+ignore=parser
+
 [MESSAGES CONTROL]
 
 # Disable the message, report, category or checker with the given id(s). You
@@ -16,7 +21,7 @@ disable=
     too-many-statements, too-many-return-statements, too-many-branches,
     too-many-instance-attributes, too-few-public-methods,
     redefined-builtin, broad-except, protected-access,
-    useless-object-inheritance
+    useless-object-inheritance, deprecated-module
 
 [REPORTS]
 
