--- a/setup.cfg
+++ b/setup.cfg
@@ -40,3 +40,9 @@ console_scripts =
     grammarinator-process = grammarinator.process:execute
     grammarinator-generate = grammarinator.generate:execute
     grammarinator-parse = grammarinator.parse:execute
+
+[build_antlr]
+commands =
+    antlerinator:4.9 grammarinator/resources/antlr/ANTLRv4Lexer.g4 grammarinator/resources/antlr/ANTLRv4Parser.g4 -Dlanguage=Python3 -o grammarinator/parser -Xexact-output-dir -no-listener
+output =
+    grammarinator/parser/ANTLRv4*.py
