Drop python version constraint from install requirements
Grammarinator is Python3-only, therefore there is no need to set
a python_version>="3.0" constraint.

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,7 +29,7 @@ include_package_data = True
 python_requires = >=3.5
 install_requires =
     antlerinator>=1!1.0.0
-    antlr4-python3-runtime==4.9.2; python_version>="3.0"
+    antlr4-python3-runtime==4.9.2
     autopep8
     inators
     jinja2
