Use literal `{}` instead of `dict()` and `[]` instead of `list()`
Also suppress linter warning about unspecified encoding in `open`.
Change triggered by a recent version of pylint.

--- a/.pylintrc
+++ b/.pylintrc
@@ -21,7 +21,7 @@ disable=
     too-many-statements, too-many-return-statements, too-many-branches,
     too-many-instance-attributes, too-few-public-methods,
     redefined-builtin, broad-except, protected-access,
-    useless-object-inheritance, deprecated-module
+    useless-object-inheritance, deprecated-module, unspecified-encoding
 
 [REPORTS]
 
