Use importlib.metadata to retrieve package version
(Use importlib_metadata backport for <py38.) This allows to get rid
of pkg_resources/setuptools install dependency.

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,9 +31,9 @@ install_requires =
     antlerinator>=1!1.0.0
     antlr4-python3-runtime==4.9.2
     autopep8
+    importlib-metadata; python_version < "3.8"
     inators
     jinja2
-    setuptools
 
 [options.entry_points]
 console_scripts =
