--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ author = Renata Hodovan, Akos Kiss
 author_email = hodovan@inf.u-szeged.hu, akiss@inf.u-szeged.hu
 url = https://github.com/renatahodovan/grammarinator
 license = BSD
-license_file = LICENSE.rst
+license_files = LICENSE.rst
 classifiers =
     Intended Audience :: Developers
     License :: OSI Approved :: BSD License
