--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,12 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: [3.6, 3.7, 3.8, 3.9, '3.10', '3.11', 'pypy-3.7']
+        exclude:
+          - python-version: 3.6
+            os: ubuntu-latest
+        include:
+          - python-version: 3.6
+            os: ubuntu-20.04
     runs-on: ${{ matrix.os }}
     steps:
       - run: git config --global core.autocrlf input
