--- a/tox.ini
+++ b/tox.ini
@@ -23,6 +23,11 @@ commands =
     pylint grammarinator
     pycodestyle grammarinator --ignore=E501 --exclude=grammarinator/parser/ANTLRv4*.py
 
+[testenv:docs]
+deps = -rdocs/requirements.txt
+commands = sphinx-build docs {envtmpdir} -E
+usedevelop = true
+
 [testenv:build]
 deps =
     build
