Use develop environment for pytest

--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,7 @@ isolated_build = true
 deps = pytest
 commands = py.test {posargs}
 download = true
+usedevelop = true
 
 [testenv:cov]
 deps = pytest-cov
@@ -18,7 +19,7 @@ deps =
     pylint
 commands =
     pylint grammarinator
-    pycodestyle grammarinator --ignore=E501
+    pycodestyle grammarinator --ignore=E501 --exclude=grammarinator/parser/*
 
 [testenv:build]
 deps =
