ANTLeRinator 1!3.0.0 doesn't clean generated files before sdist
This helps running tox when working with a development mode
install, but requires adding a manifest template.

--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@ deps =
     pylint
 commands =
     pylint grammarinator
-    pycodestyle grammarinator --ignore=E501
+    pycodestyle grammarinator --ignore=E501 --exclude=grammarinator/parser/ANTLRv4*.py
 
 [testenv:build]
 deps =
