Do not measure the coverage of the generated ANTLR sources

--- a/tox.ini
+++ b/tox.ini
@@ -9,8 +9,11 @@ download = true
 
 [testenv:cov]
 deps = pytest-cov
-commands = py.test --cov=grammarinator {posargs}
+commands = py.test --cov=grammarinator --cov-config=tox.ini {posargs}
 usedevelop = true
+
+[coverage:run]
+omit = **/parser/*
 
 [testenv:lint]
 deps =
