Split Tool API from CLI
Keep CLI entry points that can either be executed as console
scripts (e.g., `grammarinator-process`) or as modules (e.g.,
`python -m grammarinator.process`) in the `grammarinator` modules,
but move tool classes that can be invoked via the Tool API (e.g.,
`FuzzerFactory`) into a submodule called `grammarinator.tool`.

In addition to nicer separation of logic, this approach helps to
get rid of runtime warnings about import order causing potentially
unpredictable behaviour.

Also rename ANTLRv4 resource and parser directories.

--- a/setup.cfg
+++ b/setup.cfg
@@ -43,6 +43,6 @@ console_scripts =
 
 [build_antlr]
 commands =
-    antlerinator:4.12.0 grammarinator/resources/antlr/ANTLRv4Lexer.g4 grammarinator/resources/antlr/ANTLRv4Parser.g4 -Dlanguage=Python3 -o grammarinator/parser -Xexact-output-dir -no-listener
+    antlerinator:4.12.0 grammarinator/tool/resources/g4/ANTLRv4Lexer.g4 grammarinator/tool/resources/g4/ANTLRv4Parser.g4 -Dlanguage=Python3 -o grammarinator/tool/g4 -Xexact-output-dir -no-listener
 output =
-    grammarinator/parser/ANTLRv4*.py
+    grammarinator/tool/parser/ANTLRv4*.py
