--- a/tox.ini
+++ b/tox.ini
@@ -41,4 +41,6 @@ commands =
 
 [testenv:regen]
 deps =
-commands = grammarinator-process examples/grammars/HTMLLexer.g4 examples/grammars/HTMLParser.g4 -o examples/fuzzer/
+commands =
+    grammarinator-process examples/grammars/HTMLLexer.g4 examples/grammars/HTMLParser.g4 -o examples/fuzzer/ --language py
+    grammarinator-process examples/grammars/HTMLLexer.g4 examples/grammars/HTMLParser.g4 -o examples/fuzzer/ --language hpp --no-actions -Ddot=any_ascii_char
