--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,7 @@ install_requires =
     importlib-metadata; python_version < "3.8"
     inators
     jinja2
+    regex
 
 [options.entry_points]
 console_scripts =
