--- a/.pylintrc
+++ b/.pylintrc
@@ -20,14 +20,30 @@ extension-pkg-allow-list=math
 # no Warning level messages displayed, use"--disable=all --enable=classes
 # --disable=W"
 disable=
-    useless-option-value, too-many-lines,
-    line-too-long, fixme, missing-docstring, invalid-name, no-self-use, unused-argument,
-    wildcard-import, unused-wildcard-import, ungrouped-imports,
-    too-many-arguments, too-many-locals,
-    too-many-statements, too-many-return-statements, too-many-branches,
-    too-many-instance-attributes, too-few-public-methods,
-    redefined-builtin, broad-except, protected-access,
-    useless-object-inheritance, deprecated-module, unspecified-encoding,
+    broad-except,
+    deprecated-module,
+    fixme,
+    invalid-name,
+    line-too-long,
+    missing-docstring,
+    no-self-use,  # disables warning in older pylint
+    protected-access,
+    redefined-builtin,
+    too-few-public-methods,
+    too-many-arguments,
+    too-many-branches,
+    too-many-instance-attributes,
+    too-many-lines,
+    too-many-locals,
+    too-many-return-statements,
+    too-many-statements,
+    ungrouped-imports,
+    unspecified-encoding,
+    unused-argument,
+    unused-wildcard-import,
+    useless-object-inheritance,
+    useless-option-value,  # disables warning in recent pylint that does not check for no-self-use anymore
+    wildcard-import,
 
 [REPORTS]
 
