Enable splitting long conditions into multiple lines
Disabling W503 which complained about line breaks before binary
operators.

--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,7 @@ deps =
     pylint
 commands =
     pylint grammarinator
-    pycodestyle grammarinator --ignore=E501 --exclude=grammarinator/tool/g4/ANTLRv4*.py
+    pycodestyle grammarinator --ignore=E501,W503 --exclude=grammarinator/tool/g4/ANTLRv4*.py
 
 [testenv:docs]
 deps = -rdocs/requirements.txt
