Ensure test quality via linting
- Avoid wildcard imports
- Reuse inators.imp.import_object

--- a/tox.ini
+++ b/tox.ini
@@ -19,9 +19,10 @@ omit = **/tool/g4/*
 deps =
     pycodestyle
     pylint
+    pytest
 commands =
-    pylint grammarinator
-    pycodestyle grammarinator --ignore=E501,W503 --exclude=grammarinator/tool/g4/ANTLRv4*.py
+    pylint grammarinator tests
+    pycodestyle grammarinator tests --ignore=E501,W503 --exclude=grammarinator/tool/g4/ANTLRv4*.py
 
 [testenv:docs]
 deps = -rdocs/requirements.txt
