Improve GeneratorTool.create
- Fix documentation: the method does not return a tuple anymore.
- Improve internals: no need for lambdas all the time,

--- a/.pylintrc
+++ b/.pylintrc
@@ -21,6 +21,7 @@ extension-pkg-allow-list=math
 # --disable=W"
 disable=
     broad-except,
+    comparison-with-callable,
     fixme,
     invalid-name,
     line-too-long,
