Implement string formatting for tree nodes
In addition to the classic "informal" (str) and "official" (repr)
formats, a "debug" format is supported as well. Plus, the
formatting logic is now in the related classes.

--- a/.pylintrc
+++ b/.pylintrc
@@ -22,6 +22,7 @@ extension-pkg-allow-list=math
 disable=
     broad-except,
     comparison-with-callable,
+    consider-using-f-string,
     fixme,
     invalid-name,
     line-too-long,
