Documentation fixes (RuleSize.max-related)
Also build documentation in nit-picky mode from now on to avoid
similar issues in the future.

--- a/tox.ini
+++ b/tox.ini
@@ -26,7 +26,7 @@ commands =
 
 [testenv:docs]
 deps = -rdocs/requirements.txt
-commands = sphinx-build docs {envtmpdir} -E
+commands = sphinx-build docs {envtmpdir} -E -n
 usedevelop = true
 
 [testenv:build]
