Ensure that the parse tool produces trees with the same structure as the generator
The parse trees generated by ANTLR consist only of rule nodes and
do not contain information about the decisions made on alternations
or quantifiers. However, tests generated by Grammarinator store
such information in the form of alternative and quantifier nodes.
To make these trees compatible, the current patch recreates the
same structure that the generator produces in the trees obtained
from parsed input.
The approach reuses the grammar graph implementation of processor,
therefore it requires to define a lib_dir if included grammars
are stored in a separate directory. To define such directories,
similarily to grammarinator-process, grammarinator-parse also supports
the `--lib_dir` CLI argument.

Co-authored-by: Akos Kiss <akiss@inf.u-szeged.hu>

--- a/.pylintrc
+++ b/.pylintrc
@@ -33,6 +33,7 @@ disable=
     redefined-builtin,
     too-few-public-methods,
     too-many-arguments,
+    too-many-boolean-expressions,
     too-many-branches,
     too-many-instance-attributes,
     too-many-lines,
