Create more detailed output trees
Before this patch, the generated trees only contained rule nodes,
but they didn't encode information about the decisions (alternative
selection, quantifications) that produced the final tree structure.
The current commit adds such information to the tree in the form
of alternative, quantifier and quantified unparser rules. Having
these nodes in the tree makes possible the application of more
sophisticated tree manipulations.

--- a/.pylintrc
+++ b/.pylintrc
@@ -20,6 +20,7 @@ extension-pkg-allow-list=math
 # no Warning level messages displayed, use"--disable=all --enable=classes
 # --disable=W"
 disable=
+    abstract-method,
     broad-except,
     comparison-with-callable,
     consider-using-f-string,
