Add new mutation and recombination operators
Built upon the newly added tree nodes, five new operators were
introduced that are able to manipulate the tree while it
still conforms the grammar.

Additionally, forcing to use Python 3.11.5 in GitHub actions,
since Python 3.11.7 causes an inexplicable failure in multiprocessing.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: [3.7, 3.8, 3.9, '3.10', '3.11', '3.12', 'pypy-3.9']
+        python-version: [3.7, 3.8, 3.9, '3.10', '3.11.5', '3.12', 'pypy-3.9']  # FIXME: forcing to use py3.11.5 since py3.11.7 causes an inexplicable failure in multiprocessing.
     runs-on: ${{ matrix.os }}
     steps:
       - run: git config --global core.autocrlf input
