Support flatbuffer-based tree exports/imports

--- a/tox.ini
+++ b/tox.ini
@@ -22,7 +22,7 @@ deps =
     pytest
 commands =
     pylint grammarinator tests
-    pycodestyle grammarinator tests --ignore=E501,W503 --exclude=grammarinator/tool/g4/ANTLRv4*.py
+    pycodestyle grammarinator tests --ignore=E501,W503 --exclude=grammarinator/tool/g4/ANTLRv4*.py,grammarinator/tool/fbs/FBRule_generated.py
 
 [testenv:docs]
 deps = -rdocs/requirements.txt
