--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,7 @@ install_requires =
     antlerinator>=1!3.0.0
     antlr4-python3-runtime==4.13.1
     autopep8
+    flatbuffers
     inators
     jinja2
     regex
