Add CLI utility to convert the tree items of a population into test source

--- a/setup.cfg
+++ b/setup.cfg
@@ -44,6 +44,7 @@ console_scripts =
     grammarinator-process = grammarinator.process:execute
     grammarinator-generate = grammarinator.generate:execute
     grammarinator-parse = grammarinator.parse:execute
+    grammarinator-decode = grammarinator.decode:execute
 
 [build_antlr]
 commands =
