Add typing info to Grammarinator and enable mypy checks in test system
This patch extends Grammarinator with type annotations and integrates
static typing checks (mypy) into the test workflow. Some code has been
adjusted to fix typing-related issues and missing runtime checks
revealed by stricter type validation.

Co-authored by: Renáta Hodován <reni@inf.u-szeged.hu>

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,7 @@ classifiers =
     Programming Language :: Python :: 3.13
     Topic :: Software Development :: Code Generators
     Topic :: Software Development :: Testing
+    Typing :: Typed
 platform = any
 
 [options]
