--- a/tox.ini
+++ b/tox.ini
@@ -17,12 +17,14 @@ omit = **/tool/g4/*
 
 [testenv:lint]
 deps =
+    mypy
     pycodestyle
     pylint
     pytest
 commands =
     pylint grammarinator tests
-    pycodestyle grammarinator tests --ignore=E501,W503 --exclude=grammarinator/tool/g4/ANTLRv4*.py,grammarinator/tool/fbs/FBRule_generated.py
+    pycodestyle grammarinator tests --ignore=E501,W503 --exclude=grammarinator/tool/g4/ANTLRv4*.py,grammarinator/tool/fbs/FBRule_generated.py,tests/grammars/.antlr/
+    mypy grammarinator examples/fuzzer --exclude=grammarinator/tool/g4 --exclude=grammarinator/tool/fbs --follow-imports=skip --ignore-missing-imports
 
 [testenv:docs]
 deps = -rdocs/requirements.txt
