--- a/setup.cfg
+++ b/setup.cfg
@@ -32,7 +32,7 @@ install_requires =
     antlerinator>=1!3.0.0
     antlr4-python3-runtime==4.13.2
     autopep8
-    flatbuffers
+    flatbuffers==24.3.25
     inators
     jinja2
     regex
