--- a/.pylintrc
+++ b/.pylintrc
@@ -38,6 +38,7 @@ disable=
     too-many-instance-attributes,
     too-many-lines,
     too-many-locals,
+    too-many-nested-blocks,
     too-many-positional-arguments,
     too-many-return-statements,
     too-many-statements,
