Add memoization to LibFuzzer integration as well
In addition to adding memoization support to LibFuzzer, its behavior
has been adjusted: rather than storing the full raw test case in the
memo, only its xxh hash is recorded.

--- a/grammarinator-cxx/libgrammarinator/CMakeLists.txt
+++ b/grammarinator-cxx/libgrammarinator/CMakeLists.txt
@@ -7,6 +7,7 @@
 
 find_package(flatbuffers REQUIRED)
 find_package(nlohmann_json REQUIRED)
+find_package(xxhash REQUIRED)
 
 build_flatbuffers(${CMAKE_SOURCE_DIR}/../grammarinator/tool/resources/fbs/FBRule.fbs
                   ""
@@ -20,7 +21,7 @@ add_library(grammarinator INTERFACE)
 target_include_directories(grammarinator INTERFACE
                            ${CMAKE_CURRENT_SOURCE_DIR}/include
                            ${CMAKE_CURRENT_BINARY_DIR}/generated_include)
-target_link_libraries(grammarinator INTERFACE flatbuffers::flatbuffers nlohmann_json::nlohmann_json)
+target_link_libraries(grammarinator INTERFACE flatbuffers::flatbuffers nlohmann_json::nlohmann_json xxHash::xxhash)
 add_dependencies(grammarinator grammarinator_tool_fbs)
 
 configure_file(libgrammarinator.pc.in libgrammarinator.pc @ONLY)
