Run sphinx-build from the docs directory when toxing
This is to align the local current working directory of Sphinx with
the one used on ReadTheDocs. This ensures that runcmd directives
find programs to be executed consistently on the same paths. (And
so, we don't get "No such file or directory" error messages instead
of nice command outputs.)

(The change is somewhat speculative, but there is no way of testing
it other than pushing it to RTD and crossing fingers.)

--- a/tox.ini
+++ b/tox.ini
@@ -28,7 +28,8 @@ commands =
 
 [testenv:docs]
 deps = -rdocs/requirements.txt
-commands = sphinx-build docs {envtmpdir} -E -n
+changedir = docs
+commands = sphinx-build . {envtmpdir} -E -n
 usedevelop = true
 
 [testenv:build]
