Ensure that FlatBuffers and xxHash libraries are used as header-only in C++

--- a/grammarinator-cxx/libgrammarinator/CMakeLists.txt
+++ b/grammarinator-cxx/libgrammarinator/CMakeLists.txt
@@ -9,6 +9,13 @@ find_package(flatbuffers REQUIRED)
 find_package(nlohmann_json REQUIRED)
 find_package(xxhash REQUIRED)
 
+add_library(flatbuffers_headers INTERFACE)
+target_include_directories(flatbuffers_headers INTERFACE ${flatbuffers_INCLUDE_DIRS})
+
+add_library(xxhash_headers INTERFACE)
+target_include_directories(xxhash_headers INTERFACE ${xxHash_INCLUDE_DIRS})
+target_compile_definitions(xxhash_headers INTERFACE XXH_INLINE_ALL)
+
 build_flatbuffers(${CMAKE_SOURCE_DIR}/../grammarinator/tool/resources/fbs/FBRule.fbs
                   ""
                   grammarinator_tool_fbs
@@ -21,7 +28,7 @@ add_library(grammarinator INTERFACE)
 target_include_directories(grammarinator INTERFACE
                            ${CMAKE_CURRENT_SOURCE_DIR}/include
                            ${CMAKE_CURRENT_BINARY_DIR}/generated_include)
-target_link_libraries(grammarinator INTERFACE flatbuffers::flatbuffers nlohmann_json::nlohmann_json xxHash::xxhash)
+target_link_libraries(grammarinator INTERFACE flatbuffers_headers nlohmann_json::nlohmann_json xxhash_headers)
 add_dependencies(grammarinator grammarinator_tool_fbs)
 
 configure_file(libgrammarinator.pc.in libgrammarinator.pc @ONLY)
