Improve the C++ build system
- Allow multiple include directories to be specified. To cmake,
  the `GRAMMARINATOR_INCLUDEDIRS` variable can be passed with a
  semicolon-separated list of directories. For the build helper
  script, the `--includedir` CLI option may be specified multiple
  times.
- Change the default serializer to
  `grammarinator::runtime::NoSpaceSerializer` to align it with the
  Python code path (where the default is `str`, its equivalent).
- Change the build helper script not to automatically append the
  build type to the path to the build directory. (Which makes
  finding the built artefacts counterintuitive, especially if the
  build directory is explicitly specified on the command line.)

--- a/grammarinator-cxx/CMakeLists.txt
+++ b/grammarinator-cxx/CMakeLists.txt
@@ -19,7 +19,7 @@ set(GRAMMARINATOR_TRANSFORMER "" CACHE STRING "name of the transformer function 
 set(GRAMMARINATOR_SERIALIZER "" CACHE STRING "name of the serializer function (for specialized artefacts)")
 set(GRAMMARINATOR_TREECODEC "" CACHE STRING "name of the tree codec class (for specialized artefacts)")
 set(GRAMMARINATOR_INCLUDE "" CACHE STRING "path to a header file (relative to the include path) to include during compilation (for specialized artefacts)")
-set(GRAMMARINATOR_INCLUDEDIR "" CACHE STRING "path to a directory to add to the include path during compilation (for specialized artefacts)")
+set(GRAMMARINATOR_INCLUDEDIRS "" CACHE STRING "paths to directories to add to the include path during compilation (for specialized artefacts)")
 set(GRAMMARINATOR_SUFFIX "" CACHE STRING "suffix to append to the names of specialized artefacts")
 
 macro(grammarinator_status VARIABLE)
@@ -48,8 +48,8 @@ macro(grammarinator_spec_definitions TARGET)
   grammarinator_define(${TARGET} GRAMMARINATOR_SERIALIZER)
   grammarinator_define(${TARGET} GRAMMARINATOR_TREECODEC)
   grammarinator_define(${TARGET} GRAMMARINATOR_INCLUDE)
-  if (NOT ("${GRAMMARINATOR_INCLUDEDIR}" STREQUAL ""))
-    target_include_directories(${TARGET} PRIVATE "${GRAMMARINATOR_INCLUDEDIR}")
+  if (NOT ("${GRAMMARINATOR_INCLUDEDIRS}" STREQUAL ""))
+    target_include_directories(${TARGET} PRIVATE "${GRAMMARINATOR_INCLUDEDIRS}")
   endif()
   target_include_directories(${TARGET} PRIVATE "${CMAKE_SOURCE_DIR}/config")
 endmacro()
@@ -82,7 +82,7 @@ if(GRAMMARINATOR_TOOLS OR GRAMMARINATOR_GRLF OR GRAMMARINATOR_FUZZNULL)
   grammarinator_status(GRAMMARINATOR_SERIALIZER)
   grammarinator_status(GRAMMARINATOR_TREECODEC)
   grammarinator_status(GRAMMARINATOR_INCLUDE)
-  grammarinator_status(GRAMMARINATOR_INCLUDEDIR)
+  grammarinator_status(GRAMMARINATOR_INCLUDEDIRS)
   grammarinator_status(GRAMMARINATOR_SUFFIX)
 endif()
 
