Add grammar tests for the C++ code path
(Most of) the Python-based grammar tests have been adapted to C++.
A grammar can be
- processed (i.e., the C++ source of a fuzzer can be generated),
- built (i.e., the sources of the fuzzer, libgrammarinator, and
  the generate.cpp command line tool can be compiled and linked
  together), and
- used for generation of test cases.
The tests have been added under a new tox environment `cxx`.

The infrastructure of the Python-based tests has been re-used and
extended to support the C++ workflow:
- Tests can contain new test commands `TEST-PROCESS-CXX`,
  `TEST-BUILD-CXX`, `TEST-GENERATE-CXX` to support the C++
  workflow.
- Test command lines can contain `{grammar_lower}` placeholder, to
  be replaced with the name of the grammar in all lower case.

Notes:
- DispatchingModel.g4 is not adapted since the C++ runtime does not
  have a DispatchingModel.
- ImagToken.g4 is not adapted since C++ does not allow multiple
  (re-)definitions of the same method in a class.
- InitAfter.g4 and Returns.g4 are not adapted since the C++
  generator template does not correctly handle returns from rules.
- SurrogatePairs.g4 is not adapted since the C++ runtime does not
  support encodings.

- Charset.g4 is only built and used for generation, but reparsing
  is skipped because it fails on Windows for some
  yet-to-be-analysed encoding issue.
- Custom.g4 is is only partially tested because subclassing the
  generator in does not work as expected in C++ (base methods are
  not virtual).
- LifeCycle.g4 is only built and used for generation, but
  population-based test generation is skipped because of some
  crashes yet to be fixed.
- UnicodeProperties{Lexer,Parser}.g4 are only built and used for
  generation, but reparsing is skipped because of Unicode version
  differences between Grammarinator and ANTLR. This behaviour is in
  alignment with the Python variant of this grammar.

- The grammar of Custom.g4 has been altered even for the
  Python-based va

--- a/tox.ini
+++ b/tox.ini
@@ -4,12 +4,21 @@ isolated_build = true
 
 [testenv]
 deps = pytest
-commands = py.test {posargs}
+commands = py.test -m "not cxxtest" -v {posargs}
 download = true
+
+[testenv:cxx]
+deps = pytest
+commands = py.test -m "cxxtest" -v {posargs}
+download = true
+
+[pytest]
+markers =
+    cxxtest: mark a test as specific to the C++ backend.
 
 [testenv:cov]
 deps = pytest-cov
-commands = py.test --cov=grammarinator --cov-config=tox.ini {posargs}
+commands = py.test -m "not cxxtest" --cov=grammarinator --cov-config=tox.ini {posargs}
 usedevelop = true
 
 [coverage:run]
