--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: main
 on: [push, pull_request]
 
 jobs:
-  test:
+  test-py:
     strategy:
       fail-fast: false
       matrix:
@@ -24,6 +24,30 @@ jobs:
         if: matrix.os == 'windows-latest'
       - run: pip install --upgrade tox
       - run: tox -v -e py
+
+  test-cxx:
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
+    steps:
+      - run: git config --global core.autocrlf input
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.x'
+      - uses: actions/setup-java@v4
+        with:
+          java-version: 17
+          distribution: temurin
+        if: matrix.os == 'windows-latest'
+      - run: pip install --upgrade tox
+      - run: pip install -r grammarinator-cxx/dev/requirements.txt
+      - run: conan profile detect
+      - run: tox -v -e cxx
 
   lint:
     runs-on: ubuntu-latest
@@ -65,7 +89,7 @@ jobs:
       - run: tox -v -e docs
 
   publish:
-    needs: [test, lint, docs]
+    needs: [test-py, lint, docs]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
