Update build system to handle non-gcc/clang compilers
- Don't hard-code compiler or linker options in the CMakeLists.
  C++ standard support and optimizations are handled by cmake via
  built-in variables (like CMAKE_CXX_STANDARD and CMAKE_BUILD_TYPE).
- Properly set up output directories for multi-config builds as
  well.

--- a/grammarinator-cxx/CMakeLists.txt
+++ b/grammarinator-cxx/CMakeLists.txt
@@ -91,7 +91,6 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_compile_definitions(GRAMMARINATOR_VERSION=${GRAMMARINATOR_VERSION})
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-error -O3")
 
 # Setup directories
 # Note: This mimics a conventional file system layout in the build directory for
@@ -100,6 +99,14 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-error -O3")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin/")
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib/")
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib/")
+# Also, set the same directories for multi-config builds (e.g., MSVC)
+foreach(CONFIG ${CMAKE_CONFIGURATION_TYPES})
+  string(TOUPPER ${CONFIG} CONFIG)
+  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${CONFIG} "${CMAKE_BINARY_DIR}/bin/")
+  set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${CONFIG} "${CMAKE_BINARY_DIR}/lib/")
+  set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${CONFIG} "${CMAKE_BINARY_DIR}/lib/")
+endforeach()
+
 
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_BINARY_DIR})
 list(APPEND CMAKE_PREFIX_PATH ${CMAKE_BINARY_DIR})
