--- a/grammarinator-cxx/tools/CMakeLists.txt
+++ b/grammarinator-cxx/tools/CMakeLists.txt
@@ -10,7 +10,7 @@ if(GRAMMARINATOR_TOOLS)
     grammarinator_spec_target_name(GENERATE grammarinator-generate)
     add_executable(${GENERATE} generate.cpp)
     grammarinator_spec_definitions(${GENERATE})
-    target_link_libraries(${GENERATE} grammarinator cxxopts::cxxopts -std=c++20)
+    target_link_libraries(${GENERATE} grammarinator cxxopts::cxxopts)
     install(TARGETS ${GENERATE} DESTINATION bin)
 endif()
 
@@ -18,5 +18,5 @@ if(GRAMMARINATOR_FUZZNULL)
     grammarinator_spec_target_name(FUZZNULL fuzznull)
     add_executable(${FUZZNULL} fuzznull.cpp)
     target_compile_options(${FUZZNULL} PRIVATE -fsanitize=fuzzer)
-    target_link_libraries(${FUZZNULL} ${GRLF} -fsanitize=fuzzer,address -std=c++20)
+    target_link_libraries(${FUZZNULL} ${GRLF} -fsanitize=fuzzer,address)
 endif()
