Second try to improve the configuration of libgrlf and tools
Revert most of the previous patch that removed config.h. This
commit restores config.h renamed as grammarinator/config.hpp,
while removing the disturbing warning messages and the superfluous
includes.

--- a/grammarinator-cxx/CMakeLists.txt
+++ b/grammarinator-cxx/CMakeLists.txt
@@ -51,7 +51,7 @@ macro(grammarinator_spec_definitions TARGET)
   if (NOT ("${GRAMMARINATOR_INCLUDEDIR}" STREQUAL ""))
     target_include_directories(${TARGET} PRIVATE "${GRAMMARINATOR_INCLUDEDIR}")
   endif()
-  target_include_directories(${TARGET} PRIVATE "${CMAKE_SOURCE_DIR}/common")
+  target_include_directories(${TARGET} PRIVATE "${CMAKE_SOURCE_DIR}/config")
 endmacro()
 
 execute_process(COMMAND git describe --tags
